added and editted comments to make the notebook more readable

--- a/log_model.ipynb
+++ b/log_model.ipynb
@@ -548,7 +548,11 @@
    "outputs": [],
    "source": [
     "#Drop rows with nan value in Credit_Mix\n",
+    "\n",
+    "#converted object to string to make accessing the nan value easier\n",
     "df['Credit_History_Age'] = df['Credit_History_Age'].astype(str)\n",
+    "\n",
+    "# Saved dataframe with 'nan' row\n",
     "df = df[df['Credit_History_Age'] != 'nan']"
    ]
   },
@@ -625,7 +629,8 @@
    "source": [
     "### Addressing the numerical columns with null values\n",
     "\n",
-    "- I will go through each numerical column and assess the best imputation method on a case by case basis"
+    "- I will go through each numerical column and assess the best imputation method on a case by case basis\n",
+    "- Right now, I've opted to keep most outliers in the dataset because they may have some predictive power. This might change later."
    ]
   },
   {
@@ -645,7 +650,7 @@
     }
    ],
    "source": [
-    "#check values of age at brief look at the csv, there appears to be unrealistic ages like negative values\n",
+    "#check values of age. After brief look at the csv, there appears to be unrealistic ages like negative values or values > 1000\n",
     "df['Age'].unique()"
    ]
   },
@@ -655,7 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Lets drop any ages less than 0 and greater than 100\n",
+    "#Lets drop any ages less than 0 and greater than 100. This seems safer them imputing because I'm not sure if those observations are real people.\n",
     "df = df[(df['Age'] >= 0) & (df['Age'] <= 100)]"
    ]
   },
@@ -696,7 +701,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# replace null values for the 'Amount_invested_monthly' with median value due to skewed data and outliers\n",
+    "# replace null values for the 'Amount_invested_monthly' with median value due to skewed data and outliers close to 10000\n",
     "median = df['Amount_invested_monthly'].median()\n",
     "df['Amount_invested_monthly'].fillna(median, inplace = True)"
    ]
@@ -728,7 +733,7 @@
     }
    ],
    "source": [
-    "#histogram of feature with null values: Monthly_Inhand_Salary\n",
+    "# histogram of feature with null values: Monthly_Inhand_Salary\n",
     "df['Monthly_Inhand_Salary'].plot(kind='hist')"
    ]
   },
@@ -738,7 +743,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# replace null values for the 'Monthly_Inhand_Salary' with median value\n",
+    "# replace null values for the 'Monthly_Inhand_Salary' with median value because the data is skewed\n",
     "median = df['Monthly_Inhand_Salary'].median()\n",
     "df['Monthly_Inhand_Salary'].fillna(median, inplace = True)"
    ]
@@ -772,7 +777,7 @@
     "# initial attempts to plot this histogram showed that it was skewed by a large outlier around at value 'max'\n",
     "max = df['Num_of_Delayed_Payment'].max()\n",
     "\n",
-    "#set the limits of the graph to not display the outlier\n",
+    "#set the limits of the graph to not display the outlier, so the rest of the data points appear more visible\n",
     "df['Num_of_Delayed_Payment'].plot(kind ='hist', bins = 1000).set_xlim(-1, 100)\n",
     "print(max)"
    ]
@@ -783,7 +788,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# due to extremely high outlier in dataset, I will fill na values with the median\n",
+    "# Data is approximately normal, but due to extremely high outlier in dataset, I will fill na values with the median\n",
     "median = df['Num_of_Delayed_Payment'].median()\n",
     "df['Num_of_Delayed_Payment'].fillna(median, inplace = True)"
    ]
@@ -922,7 +927,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Data is skewed so i will fill na values with the median\n",
+    "#Data is skewed so I will fill na values with the median\n",
     "median = df['Monthly_Balance'].median()\n",
     "df['Monthly_Balance'].fillna(median, inplace = True)"
    ]
@@ -932,17 +937,20 @@
    "metadata": {},
    "source": [
     "### Addressing Categorical Columns\n",
-    " - I will create dummy variables for categorical data and ordinal encode ordinal categorical data. This will be concacted to df after numerical data scaling."
+    " - I will create dummy variables for categorical data and ordinal encode ordinal categorical data. This will be concacted to df after numerical data scaling.\n",
+    " - Note: after initial attempt at this model, different types of encoding may improve accuracy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#drop na values of Type_of_Loan\n",
-    "df['Type_of_Loan'].dropna(axis = 0, inplace = True)"
+    "df['Type_of_Loan'].dropna(axis = 0, inplace = True)\n",
+    "\n",
+    "#These na values may be filled with another type of encoding later on"
    ]
   },
   {
@@ -951,7 +959,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create dummy df's for each categorical variable\n",
+    "#create dummy df's for each non-ordinal categorical variable\n",
     "type_of_loan_dummies = pd.get_dummies(df['Type_of_Loan'])\n",
     "payment_of_min_amount_dummies = pd.get_dummies(df['Payment_of_Min_Amount'])\n",
     "payment_behaviour_dummies = pd.get_dummies(df['Payment_Behaviour'])\n",
@@ -967,6 +975,7 @@
     "#convert Credit_Mix to ordinal numerical column\n",
     "target_list = ['Bad', 'Standard', 'Good']\n",
     "\n",
+    "# create codes for Credit_Mix: output should be 0 = 'Bad', 1 = 'Standard', 2 = 'Good'\n",
     "df['Credit_Mix'] = pd.Categorical(df['Credit_Mix'], categories= target_list, ordered=True).codes"
    ]
   },
@@ -984,6 +993,7 @@
     "    total_months = years * 12 + months\n",
     "    return total_months\n",
     "\n",
+    "#converted the object 'Credit_History Age' a string and apply the convert_to_months function to the series to get the count of months\n",
     "df['Credit_History_Age'] = df['Credit_History_Age'].astype(dtype='str').apply(convert_to_months)"
    ]
   },
@@ -1363,7 +1373,7 @@
     }
    ],
    "source": [
-    "# Train the data\n",
+    "# Train the model\n",
     "classifier.fit(X_train_scaled, y_train)"
    ]
   },
@@ -1373,7 +1383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#make predictions\n",
+    "# make predictions\n",
     "predictions = classifier.predict(X_test_scaled)"
    ]
   },
@@ -1396,7 +1406,7 @@
     }
    ],
    "source": [
-    "#get confusion matrix\n",
+    "# get confusion matrix\n",
     "confusion_matrix(y_test, predictions)"
    ]
   },
