got counts of each unique target class

--- a/models.ipynb
+++ b/models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1393,10 +1393,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1, 2], dtype=int8), array([17094, 28699,  8451], dtype=int64))"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(y, return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#The Random Forest Model\n",
+    "\n",
     "# # Check final feature dataframe for correlation among features\n",
     "# correlation_matrix = X.corr()\n",
     "# plt.figure(figsize = (15,10))\n",
@@ -1626,9 +1648,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[2951, 1262,  107],\n",
-       "       [1231, 5171,  729],\n",
-       "       [ 116,  747, 1247]], dtype=int64)"
+       "array([[2977, 1239,  104],\n",
+       "       [1212, 5178,  741],\n",
+       "       [ 122,  722, 1266]], dtype=int64)"
       ]
      },
      "execution_count": 51,
@@ -1652,9 +1674,9 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.69      0.68      0.68      4320\n",
-      "           1       0.72      0.73      0.72      7131\n",
-      "           2       0.60      0.59      0.59      2110\n",
+      "           0       0.69      0.69      0.69      4320\n",
+      "           1       0.73      0.73      0.73      7131\n",
+      "           2       0.60      0.60      0.60      2110\n",
       "\n",
       "    accuracy                           0.69     13561\n",
       "   macro avg       0.67      0.67      0.67     13561\n",
@@ -1758,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1833,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
