--- a/models.ipynb
+++ b/models.ipynb
@@ -4,9 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# WORK IN PROGRESS\n",
+    "# Logistic Regression, Decision Tree, and Random Forest Models\n",
     "\n",
-    "- THIS DATA AND THIS MODEL ARE STILL BEING TRANSFORMED AND ASSESSED"
+    "### Data Transformation\n",
+    "- The data for these models was taken from the cpl_train_cleaned.csv located in the resources folder\n",
+    "- For numerical data, the median values were imputed for null values based on skewed distributions of the features and the presence of potential outliers in the data.\n",
+    "- Initially, dummy variables were created for non-ordinal categorical data. Ultimately, frequency encoding was used to reduce the number of columns the model used due to categorical variables with many unique values.\n",
+    "\n",
+    "### Models\n",
+    "- Three types of models were created: Logistic Regression, Decision Tree, and Random Forest\n",
+    "- After multiple attempts at transforming data and optimizing models; The Random Forest modelperformed the best\n",
+    "\n",
+    "### Model Performance\n",
+    "- Final Random Forest accuracy was 79% with an average AUC of 0.92\n",
+    "- AUC is a better metric of model performance for our data due to uneven distribution of classes in our data"
    ]
   },
   {
@@ -18,27 +29,21 @@
     "#import dependecies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import joblib\n",
-    "import pickle\n",
-    "import bz2\n",
-    "import gzip\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
     "\n",
     "from sklearn import tree\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "from sklearn.datasets import load_iris\n",
+    "\n",
     "from sklearn.preprocessing import label_binarize\n",
-    "from sklearn.metrics import accuracy_score, roc_curve, auc\n",
+    "from sklearn.metrics import roc_curve, auc\n",
     "from itertools import cycle"
    ]
   },
@@ -1898,7 +1903,7 @@
    "source": [
     "# More thoughts\n",
     "- Using frequency encoding reduced accuracy in the logistic regression and decision tree, but improved accuaracy in the Random Forest model. The Random Forest model has been the most accurate for both dummy encoding and frequency encoding.\n",
-    "- Average AUC of 0.92 for Random Forest Model"
+    "- Average AUC of 0.92 for Random Forest Model, Logistic Regression, Decision Tree, and Random Forest Models"
    ]
   }
  ],
